Reduce the amount of compiler warnings across many files, delete some unused files